--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Coming Soon 3</title>
+    <title>YourLooks</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/icons/f.png">
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -28,8 +29,10 @@
             <input class="s1-txt2 placeholder0 input100" type="text" name="email" placeholder="Your Email">
             <span class="focus-input100"></span>
           </div>
-          <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1" type="submit
-				"> GET NOTIFIED </button>
+          <button class="flex-c-m s1-txt3 size3 how-btn trans-04 where1" type="submit">
+            GET NOTIFIED
+          </button>
+          
           <br>
           <span id="Success"></span>
         </form>
